<resources>
    <string name="app_name">Accu-Knee</string>
    <string name="skip">Skip</string>
    <string name="seconds">Seconds</string>
    <string name="please_wait_resetting_slide">Please wait resetting slide...</string>
    <string name="reset">Reset</string>
    <string name="next">Next</string>
    <string name="text_calibration">Remove all loads from the slide such that there is no force on the load cell. \n\nSlide should be at zero position, if slide is not at zero position.\nFirst reset slide by pressing RESET Button given below. \n\nObserve the readings for few seconds, this reading should be close to zero.\nPress \'RESET LOAD CELL\' to calibrate it for non zero readings.</string>
    <string name="txt_disclaimer">The protocol suggestions are not meant to cure, diagnose or treat and specific condition. It is your responsibility as licensed health care professional is to user these suggestions in a safe and proper manner as it pertains to your state license scope of practice. It is your responsibility to perform any and all diagnostic procedures before using the Accu-Knee device.</string>
    <string name="txt_disclaimer_heading">Accu-Knee PROTOCOL DISCLAIMER</string>
    <string name="preset_1">Preset 1</string>
    <string name="preset_2">Preset 2</string>
    <string name="preset_3">Preset 3</string>
    <string name="preset_4">Preset 4</string>
    <string name="preset_5">Preset 5</string>
    <string name="preset_6">Preset 6</string>
    <string name="preset_7">Preset 7</string>
    <string name="preset_8">Preset 8</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="select_treatment_time">Select Treatment Time</string>
    <string name="select_treatment_force">Select Distraction Force</string>
    <string name="minutes">Minutes</string>
    <string name="lbs">Lbs</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="distraction_force">Distraction Force</string>
    <string name="treatment_time">Treatment Time</string>
    <string name="protocol_type">Protocol Type</string>
    <string name="_0">0</string>
    <string name="reset_nload_cell">Reset\nLoad Cell</string>
    <string name="connected">"Connected"</string>
    <string name="not_connected">"Not Connected"</string>
    <string name="connecting">Connecting</string>
    <string name="start_note">Note: Protocol 4 is fixed for 6 minutes and Protocol 8 is fixed for 4 minutes</string>
    <string name="force_bar">Force Bar</string>
    <string name="time_bar">Time Bar</string>
    <string name="countdown_bar">CountDown Bar</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="emergency_stop">Emergency Stop</string>
    <string name="running">Running</string>
</resources>