<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StartActivity">

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:text="@string/connecting"
        android:textColor="@color/orange"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:text="@string/protocol_type"
        android:textColor="@color/blue"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatus"
        app:layout_constraintWidth_percent="0.35" />

    <TextView
        android:id="@+id/tvPresetType"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:textColor="@color/red"
        android:textSize="@dimen/_22sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_weight="1"
        android:text="@string/treatment_time"
        android:textColor="@color/blue"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintWidth_percent="0.35" />


    <TextView
        android:id="@+id/tvTreatmentTime"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_36sdp"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="@dimen/_28sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:gravity="bottom"
        android:text="@string/minutes"
        android:textColor="@color/red"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTreatmentTime"
        app:layout_constraintStart_toEndOf="@+id/tvTreatmentTime"
        app:layout_constraintTop_toTopOf="@+id/tvTreatmentTime"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/distraction_force"
        android:textColor="@color/blue"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintWidth_percent="0.35" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/start_note"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvForce"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_36sdp"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="@dimen/_28sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:gravity="bottom"
        android:text="@string/lbs"
        android:textColor="@color/red"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@+id/tvForce"
        app:layout_constraintStart_toEndOf="@+id/tvForce"
        app:layout_constraintTop_toTopOf="@+id/tvForce"
        app:layout_constraintVertical_bias="0.8" />
    <Button
        android:id="@+id/btnClose"
        android:layout_height="@dimen/_40sdp"
        android:layout_width="@dimen/_100sdp"
        android:background="@drawable/bg_button"
        android:text="Close"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="@id/btnBack"
        app:layout_constraintRight_toLeftOf="@id/btnBack"
        android:layout_marginEnd="@dimen/_16sdp"

        />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/bg_button"
        android:text="@string/start"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/bg_button"
        android:text="@string/cancel"
        android:textSize="@dimen/_14sdp"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnStart" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/bg_outline_button"
        android:text="@string/back"
        android:textColor="@color/blue"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel" />


</androidx.constraintlayout.widget.ConstraintLayout>