<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DisclaimerActivity">

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:text="@string/connecting"
        android:textColor="@color/orange"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/txt_disclaimer_heading"
        android:textColor="@color/red"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/tvStatus" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@color/grey"
        android:letterSpacing="0.06"
        android:padding="@dimen/_8sdp"
        android:text="@string/txt_disclaimer"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/bg_button"
        android:text="@string/skip"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:id="@+id/btnClose"
        android:layout_height="@dimen/_40sdp"
        android:layout_width="@dimen/_100sdp"
        android:background="@drawable/bg_button"
        android:text="Close"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@id/btnReset"
        app:layout_constraintTop_toTopOf="@id/btnReset"
        app:layout_constraintLeft_toRightOf="@id/btnReset"
        android:layout_marginStart="@dimen/_16sdp"

        />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/bg_button"
        android:text="@string/reset"
        android:textSize="@dimen/_14sdp"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>