<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EmergencyActivity">

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:text="@string/connecting"
        android:textColor="@color/orange"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@color/red"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/emergency_stop"
        android:textColor="@color/white"
        android:textSize="@dimen/_38sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatus" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/bg_button"
        android:text="@string/reset"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/btnResume"
        app:layout_constraintTop_toTopOf="@+id/btnResume" />
    <Button
        android:id="@+id/btnClose"
        android:layout_height="@dimen/_40sdp"
        android:layout_width="@dimen/_100sdp"
        android:background="@drawable/bg_button"
        android:text="Close"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@id/btnReset"
        app:layout_constraintTop_toTopOf="@id/btnReset"
        app:layout_constraintLeft_toRightOf="@id/btnReset"
        android:layout_marginStart="@dimen/_16sdp"

        />

    <Button
        android:id="@+id/btnResume"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:background="@drawable/bg_outline_button"
        android:text="@string/resume"
        android:textColor="@color/blue"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toStartOf="@+id/btnReset"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />
</androidx.constraintlayout.widget.ConstraintLayout>