<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CalibrationActivity">

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:text="@string/connecting"
        android:textColor="@color/orange"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCalibration"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/blue"
        android:text="0.0"
        android:textAlignment="center"
        android:textSize="@dimen/_42sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnResetLoadCell"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_outline_button"
        android:text="@string/reset_nload_cell"
        android:textColor="@color/blue"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="@+id/btnReset"
        app:layout_constraintEnd_toStartOf="@+id/btnReset"
        app:layout_constraintTop_toTopOf="@+id/btnReset" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:background="@color/grey"
        android:padding="@dimen/_6sdp"
        android:text="@string/text_calibration"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCalibration" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/bg_button"
        android:text="@string/next"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:id="@+id/btnClose"
        android:layout_height="@dimen/_40sdp"
        android:layout_width="@dimen/_100sdp"
        android:background="@drawable/bg_button"
        android:text="Close"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@id/btnResetLoadCell"
        app:layout_constraintTop_toTopOf="@id/btnResetLoadCell"
        app:layout_constraintRight_toLeftOf="@id/btnResetLoadCell"
        android:layout_marginEnd="@dimen/_16sdp"

        />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/bg_button"
        android:text="@string/reset"
        android:textSize="@dimen/_14sdp"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/btnNext"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintTop_toTopOf="@+id/btnNext" />

</androidx.constraintlayout.widget.ConstraintLayout>