<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResettingActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/please_wait_resetting_slide"
        android:textColor="@color/blue"
        android:textSize="@dimen/_26sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvResettingSeconds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatus"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvResettingSeconds"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="15"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="@dimen/_65sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:text="@string/seconds"
        android:textColor="@color/blue"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="@+id/tvResettingSeconds"
        app:layout_constraintStart_toEndOf="@+id/tvResettingSeconds"
        app:layout_constraintTop_toTopOf="@+id/tvResettingSeconds"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnSkip"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/bg_button"
        android:drawableEnd="@drawable/ic_forward"
        android:text="@string/skip"
        android:textSize="@dimen/_15sdp"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <Button
        android:id="@+id/btnClose"
        android:layout_height="@dimen/_40sdp"
        android:layout_width="@dimen/_100sdp"
        android:background="@drawable/bg_button"
        android:text="Close"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@id/btnSkip"
        app:layout_constraintTop_toTopOf="@id/btnSkip"
        app:layout_constraintRight_toLeftOf="@id/btnSkip"
        android:layout_marginEnd="@dimen/_16sdp"

        />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:text="@string/connecting"
        android:textColor="@color/orange"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>